apps/base/homarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homarr
  labels:
    app: homarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homarr
  template:
    metadata:
      labels:
        app: homarr
    spec:
      containers:
      - name: homarr
        image: ghcr.io/ajnart/homarr:latest
        command: ["yarn"]
        args: ["start", "--port", "7575", "--hostname", "0.0.0.0"]
        ports:
          - containerPort: 7575
        volumeMounts:
        - mountPath: /data
          name: homarr-data
      volumes:
      - name: homarr-data
        persistentVolumeClaim:
          claimName: homarr-config
