apps/base/homarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homarr
spec:
  ports:
    - port: 7575
      protocol: TCP
      name: http
  selector:
    app: homarr
  type: ClusterIP
