apps/base/homarr/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: homarr
  namespace: homarr
spec:
  entryPoints:
    - websecure
  tls: {}
    # secretName: homarr-tls
  routes:
    - match: Host(`homarr.wc`)
      kind: Rule
      services:
        - name: homarr
          port: 80
